# violence-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  install
.github/workflows/: cmake.yml
VE/: Core.hpp  Ecs.hpp
VE/Core/: type.hpp
VE/Core/classes/: Clock.hpp  Color.hpp  Shader.hpp
VE/Core/interfaces/: IAssetManager.hpp  IEvent.hpp  IGame.hpp  IScene.hpp
VE/Core/managers/: AssetsManager.hpp  NetworkManager.hpp  PathManager.hpp  SceneManager.hpp  WindowManager.hpp
VE/Core/managers/assets/: Fonts.hpp  Musics.hpp  Textures.hpp
VE/Ecs/: basic.hpp
VE/Ecs/components/: AliveZone.hpp  Animation.hpp  DebugDraw.hpp  Emitter.hpp  FxShader.hpp  Keyboard.hpp  Life.hpp  MaxSpeed.hpp  Motion.hpp  PathFollow.hpp  RigidBody.hpp  Sprite.hpp  StreamPosition.hpp  Text.hpp  TimeEvent.hpp  Transform.hpp  Transition.hpp  TypeEntity.hpp  UiTrigger.hpp
VE/Ecs/core/: ComponentFactory.hpp  EntityFactory.hpp  SystemFactory.hpp  TemplateMap.hpp  type.hpp
VE/Ecs/systems/: AliveSystem.hpp  AnimatorSystem.hpp  CollisionSystem.hpp  DebugSystem.hpp  KeyboardSystem.hpp  LifeSystem.hpp  ParticleSystem.hpp  PathSystem.hpp  PhysicsSystem.hpp  RenderSystem.hpp  TimeEventSystem.hpp  TransitionSystem.hpp  UiSystem.hpp
VE/Ecs/systems/CollisionSystem/: Arbiter.hpp  Collider.hpp  Contact.hpp  Joint.hpp
VE/Maths/: Mat22.hpp  Pos.hpp  Rect.hpp  Size.hpp  Utils.hpp  Vec2d.hpp  Vec3d.hpp
VE/Utils/: align.hpp  logger.hpp  random.hpp
client/: main.cpp
client/assets/: vortex.frag
